<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtC"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtC"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtB"
        app:layout_constraintTop_toBottomOf="@+id/txtExpresion" />

    <EditText
        android:id="@+id/txtB"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtB"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtC"
        app:layout_constraintStart_toEndOf="@+id/txtA"
        app:layout_constraintTop_toBottomOf="@+id/txtExpresion" />

    <EditText
        android:id="@+id/txtA"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtA"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExpresion" />

    <TextView
        android:id="@+id/txtExpresion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="43dp"
        android:text="@string/txtExpresion"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/txtC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtC"
        app:layout_constraintTop_toBottomOf="@+id/txtExpresion" />

    <EditText
        android:id="@+id/txtRaiz2"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="295dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:text="@string/txtRaiz2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRaiz1" />

    <EditText
        android:id="@+id/txtRaiz1"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="20dp"
        android:focusable="false"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtRaiz1"
        app:layout_constraintBottom_toTopOf="@+id/txtRaiz2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtC" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="353dp"
        android:text="@string/btnLimpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRaiz1"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />
</androidx.constraintlayout.widget.ConstraintLayout>